--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">EnglishTamagotchi</string>
+    <string name="app_name">EnglishTamagotchi2</string>
     <string name="title_activity_ordinary_card">OrdinaryCardActivity</string>
 </resources>
